--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.2/css/mdb.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-</head>
+    <script>
+      if (localStorage.getItem('currentUser')){
+      window.location.replace('./events.html');
+      }
+    </script>
+  </head>
 <body> 
 <!-- Vedio Overlay -->
 <div class="video-overlay"></div>
