about shortcut added

--- a/events.html
+++ b/events.html
@@ -224,6 +224,10 @@
                 <td>Show shortcuts</td>
               </tr>
               <tr>
+                  <td>alt+a</td>
+                  <td>About</td>
+                </tr>
+              <tr>
                 <td>alt+l</td>
                 <td>Logout</td>
               </tr>
@@ -266,23 +270,6 @@
   </div>
 </div>
 <!-- End-->
-
-
-<!-- Modal for login first-->
-<div class="modal fade top" id="loginFirst" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-  aria-hidden="true" data-backdrop="true">
-  <div class="modal-dialog modal-frame modal-top modal-notify modal-info" role="document">
-    <div class="modal-content">
-      <div class="modal-body">
-        <div class="row d-flex justify-content-center align-items-center">
-          <h3 class="pt-3 pr-2">You must login first.</h3>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!--End-->
-
 
 <!-- Modal for about-->
 <div class="modal fade" id="aboutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
