about modal updated

--- a/events.html
+++ b/events.html
@@ -340,6 +340,15 @@
             <div class="row">
                 <p class="col-10 offset-1">When a user add, edit or delete a note the success message is displayed on the screen. </p>
             </div><hr>
+            <h4>Notes on tooltip</h4>
+            <div class="row">
+                <p class="col-3 offset-1"> 
+                 <br><br><br><br><br> When you hover over a date where notes are present you can see all the notes as
+                  a tooltip.  </p>
+                <div class="col-6 offset-1">
+                    <img src="./screenshots/tooltip.png" class="img-fluid img-thumbnail hoverable">
+                </div>
+            </div><hr>
             <h4>Keyboard Shorcuts</h4>
             <div class="row">
                 <p class="col-10 offset-1">
