updated about modal

--- a/events.html
+++ b/events.html
@@ -331,7 +331,7 @@
             <h4>Weekly notes</h4>
             <div class="row">
                 <p class="col-10 offset-1">There is a seperate tab for weekly notes. To view the notes of current week and the next week 
-                  click on the weekly notes button on the navigation bar. </p>
+                  click on the weekly notes button on the navigation bar. You can click a date here to update or delete them.</p>
                 <div class="col-10 offset-1">
                     <img src="./screenshots/weekly-notes.PNG" class="img-fluid img-thumbnail hoverable">
                 </div>
