updated about modal

--- a/events.html
+++ b/events.html
@@ -361,6 +361,12 @@
             <div class="row">
                 <p class="col-10 offset-1"> You can not perform any kind of operations on the notes if the date is already gone. </p>
             </div><hr>
+            <h4>Auto login</h4>
+            <div class="row">
+                <p class="col-10 offset-1"> Once you login in the application than you don't have to login again until you logged out.
+                Also if try to access the <i>events.html</i> page without login it will redirect you to the <i>index.html</i> page.
+                </p>
+            </div><hr>
 
 
 
